# EntityFramework

./: .gitignore  CData.cpp  CMakeLists.txt  README.md  prueba.json  todolist.txt
include/: CData.h  Component.h  ComponentData.h  Entity.h  EntityManager.h  IData.h  IJsonSerializable.h  ITagged.h  JSONSerializer.h  Tag.h  TagMap.h
lib/: CData.cpp  CMakeLists.txt  Component.cpp  ComponentData.cpp  Entity.cpp  EntityManager.cpp  IData.cpp  ITagged.cpp  JSONSerializer.cpp  Tag.cpp
lib/lib_json/: CMakeLists.txt
test/: test-entity.cpp
